add related publications to result page
